updated some images and fixed some layout bugs.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -124,7 +124,7 @@ button {
 
 .menu {
   width: 100%;
-  height: 8vh;
+  height: 10vh;
   position: fixed;
   bottom: 0;
 
@@ -168,12 +168,11 @@ button {
 
 .menu_buttons {
   width: 100%;
-  height: 25vh;
+  height: 30vh;
 
   position: fixed;
   bottom: 0;
   background-color: rgb(25, 22, 39);
-  z-index: 10;
 
   display: grid;
   grid-template-columns: auto auto auto;
@@ -398,12 +397,14 @@ button {
 
 .certifications_container .data_container {
   width: 100%;
-  text-align: center;
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .certifications_container .certificate {
+  max-width: 500px;
   margin-top: 60px;
   border: solid 2px rgb(114, 0, 180);
   border-radius: 20px;
@@ -427,7 +428,7 @@ button {
 }
 
 .certification_data li {
-  padding: 10px 0;
+  padding: 5px 0;
 }
 
 .certification_data span {
@@ -481,6 +482,7 @@ button {
 .slideshow_container img {
   width: 100%;
   max-width: 800px;
+  max-height: 450px;
   border-radius: 20px 20px 0 0;
   display: block;
   margin: auto;
@@ -607,6 +609,7 @@ button {
 /* footer section */
 
 footer {
+  padding: 0 5%;
   display: grid;
   place-items: center;
 }
